CVEs/CVE-2013-6462 (LibXfont)/Reports/Source Code Reports/CPPCheck.txt
LibXFont/src/bitmap/bdfread.c:706:2: error: Address of local auto-variable assigned to a function parameter. [autoVariables]
 pState->pointSizeProp = &props[nextProp];
 ^
LibXFont/src/bitmap/bdfread.c:713:2: error: Address of local auto-variable assigned to a function parameter. [autoVariables]
 pState->fontProp = &props[nextProp];
 ^
LibXFont/src/bitmap/bdfread.c:720:2: error: Address of local auto-variable assigned to a function parameter. [autoVariables]
 pState->weightProp = &props[nextProp];
 ^
LibXFont/src/bitmap/bdfread.c:728:2: error: Address of local auto-variable assigned to a function parameter. [autoVariables]
 pState->resolutionProp = &props[nextProp];
 ^
LibXFont/src/bitmap/bdfread.c:735:2: error: Address of local auto-variable assigned to a function parameter. [autoVariables]
 pState->resolutionProp = &props[nextProp];
 ^
LibXFont/src/bitmap/bdfread.c:742:2: error: Address of local auto-variable assigned to a function parameter. [autoVariables]
 pState->resolutionProp = &props[nextProp];
 ^
LibXFont/src/bitmap/bdfread.c:749:2: error: Address of local auto-variable assigned to a function parameter. [autoVariables]
 pState->xHeightProp = &props[nextProp];
 ^
LibXFont/src/bitmap/bdfread.c:756:2: error: Address of local auto-variable assigned to a function parameter. [autoVariables]
 pState->quadWidthProp = &props[nextProp];
 ^
LibXFont/src/bitmap/bitmaputil.c:221:5: error: Memory leak: bitmapFont.ink_metrics [memleak]
    return TRUE;
    ^
LibXFont/src/fc/fservestr.h:142:0: error: failed to expand 'fsUnpack_XFontInfoHeader', Invalid ## usage when expanding 'fsCat'. [preprocessorErrorDirective]
#define fsCat(x,y) x##_##y
^
LibXFont/src/fontfile/catalogue.c:249:5: error: Memory leak: cat [memleak]
    return CatalogueRescan (fpe, TRUE);
    ^
LibXFont/src/fontfile/fontfile.c:830:5: error: Memory leak: data [memleak]
    return Successful;
    ^
nofile:0:0: information: Too many #ifdef configurations - cppcheck only checks 12 configurations. Use --force to check all configurations. For more details, use --enable=information. [toomanyconfigs]

